Fixed the bug with jumping boxings in the What We Do section.

--- a/css/main.css
+++ b/css/main.css
@@ -733,6 +733,7 @@ a.navbar-brand {
      background-color: #fff;
      border-color: #cfd2d8;
      border-width: 0 1px 1px;
+     min-height: 225px;
      padding: 25px;
 }
 
